2001-10-31  John Levon  <moz@compsoc.man.ac.uk>

	* module.oprofile.c: add comment about unfixable
	  races.
 
2001-10-30  John Levon  <moz@compsoc.man.ac.uk>

	* Move module code into module/ subdir. Bye
	  bye CVS history :/
 
2001-10-30  John Levon  <moz@compsoc.man.ac.uk>

	* op_x86.c: complain properly about lAPIC-less
	  machines
 
2001-10-26  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2001-10-26  H. J. Lu <hjl@users.sf.net>

	* Makefile.in: use $(LD) not ld
 
2001-10-25  Philippe Elie  <ph_e@club-internet.fr>

	* configure.in: fix version.h checking for gcc 2.91.66

2001-10-25  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in:
	* doc/Makefile.in:
	* dae/Makefile.in:
	* pp/Makefile.in:
	* gui/Makefile.in: add $DESTDIR to prefix (part from
	  H.J. Lu)

2001-10-25  H. J. Lu  <hjl@users.sf.net>

	* configure.in: better version.h workaround

	* doc/*.1:
	* doc/Makefile.in: better .so manpage install

2001-10-25  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml: minor change.
	* pp/opf_filter.cpp: repair short option -a and -s

2001-10-24  Philippe Elie  <ph_e@club-internet.fr>

	* pp/op_to_source: remove from cvs
	* pp/Makefile.in: opf_filter application renamed to op_to_source
	* pp/child_reader.h: new
	* pp/child_reader.cpp: new, allow to fork a child and read
	  its stdout/stderr
	* pp/opf_filter.h:
	* pp/opf_filter.cpp: use ChildReader to launch objdump.
	  op_to_source -a and -s must be specified with long
	  form --assembly and --source-with-assembly. This also
	  speed-up assembly output. Doc not updated.

2001-10-18  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: workaround #2, hopefully fixing
	  Mandrake (bug #471448)
 
2001-10-17  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: don't mask when restoring MSR values
 
	* doc/Makefile.in: don't use man symlinks
 
2001-10-17  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.c: save original counter setup
	  and restore on unload (bug #464094)
