@@ -1,3 +1,8 @@
+2001-11-02  Philippe Elie  <ph_e@club-internet.fr>
+
+	* modules/oprofile.h: minor cleanup
+	* modules/oprofile.c: better handling of irq statistics
+
 2001-10-31  John Levon  <moz@compsoc.man.ac.uk>
 
 	* module.oprofile.c: add comment about unfixable
